Pipeline/javax_naming_ldap/javax_naming_ldapOutputResult.txt
Sample: InitialLdapContext_5
----------------------------------------------------------------
output:
./javax_naming_ldap/javaFiles/InitialLdapContext_5.java:5: error: cannot find symbol
import javax.naming.directory.BasicControl;
                             ^
  symbol:   class BasicControl
  location: package javax.naming.directory
./javax_naming_ldap/javaFiles/InitialLdapContext_5.java:14: error: cannot find symbol
            Control control = new BasicControl("1.2.3.4", true, "control value".getBytes());
                                  ^
  symbol:   class BasicControl
  location: class InitialLdapContext_5
2 errors


================================================================

